--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Malla Interactiva Ingeniería USACH</title>
+  <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+  <h1>Malla Interactiva - Ingeniería en Computación USACH</h1>
+  <div class="malla" id="malla"></div>
+  <script src="script.js"></script>
+</body>
+</html>
 
