--- a/index.html
+++ b/index.html
@@ -7,8 +7,52 @@
 </head>
 <body>
   <h1>Malla Interactiva - Ingeniería en Computación USACH</h1>
-  <div class="malla" id="malla"></div>
+  <div class="contenedor-anios">
+    <div class="anio">
+      <h2>1° Año</h2>
+      <div class="semestre">
+        <h3>1er Semestre</h3>
+        <div class="malla" id="semestre1a1"></div>
+      </div>
+      <div class="semestre">
+        <h3>2do Semestre</h3>
+        <div class="malla" id="semestre1a2"></div>
+      </div>
+    </div>
+    <div class="anio">
+      <h2>2° Año</h2>
+      <div class="semestre">
+        <h3>1er Semestre</h3>
+        <div class="malla" id="semestre2a1"></div>
+      </div>
+      <div class="semestre">
+        <h3>2do Semestre</h3>
+        <div class="malla" id="semestre2a2"></div>
+      </div>
+    </div>
+    <div class="anio">
+      <h2>3° Año</h2>
+      <div class="semestre">
+        <h3>1er Semestre</h3>
+        <div class="malla" id="semestre3a1"></div>
+      </div>
+      <div class="semestre">
+        <h3>2do Semestre</h3>
+        <div class="malla" id="semestre3a2"></div>
+      </div>
+    </div>
+    <div class="anio">
+      <h2>4° Año</h2>
+      <div class="semestre">
+        <h3>1er Semestre</h3>
+        <div class="malla" id="semestre4a1"></div>
+      </div>
+      <div class="semestre">
+        <h3>2do Semestre</h3>
+        <div class="malla" id="semestre4a2"></div>
+      </div>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
-
