--- a/index.html
+++ b/index.html
@@ -7,29 +7,16 @@
 </head>
 <body>
   <h1>Malla Interactiva - Ingeniería en Computación USACH</h1>
-  <div class="contenedor-anios">
-    <div class="anio">
-      <h2>1° Año</h2>
-      <div class="malla" id="semestre1a1"></div>
-      <div class="malla" id="semestre1a2"></div>
-    </div>
-    <div class="anio">
-      <h2>2° Año</h2>
-      <div class="malla" id="semestre2a1"></div>
-      <div class="malla" id="semestre2a2"></div>
-    </div>
-    <div class="anio">
-      <h2>3° Año</h2>
-      <div class="malla" id="semestre3a1"></div>
-      <div class="malla" id="semestre3a2"></div>
-    </div>
-    <div class="anio">
-      <h2>4° Año</h2>
-      <div class="malla" id="semestre4a1"></div>
-      <div class="malla" id="semestre4a2"></div>
-    </div>
+  <div class="contenedor-semestres">
+    <div class="semestre" id="semestre1a1"><h2>1°Año<br>1er Semestre</h2></div>
+    <div class="semestre" id="semestre1a2"><h2>1°Año<br>2do Semestre</h2></div>
+    <div class="semestre" id="semestre2a1"><h2>2°Año<br>1er Semestre</h2></div>
+    <div class="semestre" id="semestre2a2"><h2>2°Año<br>2do Semestre</h2></div>
+    <div class="semestre" id="semestre3a1"><h2>3°Año<br>1er Semestre</h2></div>
+    <div class="semestre" id="semestre3a2"><h2>3°Año<br>2do Semestre</h2></div>
+    <div class="semestre" id="semestre4a1"><h2>4°Año<br>1er Semestre</h2></div>
+    <div class="semestre" id="semestre4a2"><h2>4°Año<br>2do Semestre</h2></div>
   </div>
   <script src="script.js"></script>
 </body>
 </html>
-
